# jetbot_gui

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
gui_uri/: GUI_qml_module_dir_map.qrc  qmldir
gui_uri/qml/: Background.qml  DisplayMap.qml  TopBar.qml
include/: Backend.hpp  CameraCodec.hpp  JetBot.hpp  JetBotMessages.hpp  JsonParser.hpp  TCPClient.hpp  VideoProvider.hpp
include/Joystick/: Joystick.hpp  JoystickCommands.hpp  JoystickHandler.hpp  MotionCommands.hpp
include/Server/: JetbotData.hpp  Server.hpp  ServerData.hpp
include/Structs/: GUIData.hpp  JetbotData.hpp  ServerData.hpp
include/VideoStream/: VideoReceiver.hpp
qml/: BottomBar.qml  CustomSwitch.qml  DesiredSpeedDial.qml  DisplayCamera.qml  DisplayMap.qml  DoubleSpinBox.qml  Main.qml  Modes.qml  SpeedIndicator.qml  TopBar.qml
src/: Backend.cpp  JetBot.cpp  TCPClient.cpp  VideoProvider.cpp
src/Joystick/: Joystick.cpp  JoystickHandler.cpp
src/Server/: Server.cpp
src/VideoStream/: VideoReceiver.cpp
